# pycconverter

./: LICENSE  README.md
pycConverter/: README.md  pyproject.toml
pycConverter/pycconverter/: __init__.py  pyc_converter.py
pycConverter/tests/: test_pycconverter.py
